# ai-recruitment

./: .env.example  .gitignore  README.md  auth0.config.ts  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: config.ts  layout.tsx  page.tsx
app/api/users/: route.ts
app/api/users/[userId]/: route.ts
app/components/: LandingPage.tsx
app/components/dashboard/: JobSeekerDashboard.tsx  RecruiterDashboard.tsx
app/mode-selection/: page.tsx
app/role/[id]/: page.tsx
app/upload-cv/: page.tsx
app/upload-jd/: page.tsx
backend/: .env.example  pyproject.toml
backend/app/: exceptions.py  main.py
backend/app/config/: __init__.py  config.ini  config.production.ini  config.staging.ini  logging.ini
backend/app/routers/: cvs.py  roles.py  users.py
backend/app/services/document_intelligence/: client.py  config.py  models.py  processor.py  text_processing.py  utils.py
backend/app/services/llm/: processor.py  types.py
backend/app/services/roles/: role_listing_manager.py  role_profile_manager.py  schemas.py
backend/app/services/storage/: __init__.py  cosmos_db.py  embeddings.py
backend/app/services/users/: cv_profile_manager.py  schemas.py  user_manager.py
backend/app/services/vision/: client.py  config.py  models.py  types.py  utils.py
backend/app/workers/: cv_processor.py  jd_processor.py  profiler.py
components/ui/: dialog.tsx  file-upload.tsx
lib/: auth0.ts
types/: user.ts
